# CasualLibrary

./: .gitignore  CMakeLists.txt  CasualLibrary.cpp  CasualLibrary.sln  CasualLibrary.vcxproj  CasualLibrary.vcxproj.filters  Doxyfile  LICENSE  README.md
Debug/: CasualLibrary.ilk  CasualLibrary.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/CasualLibrary.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CasualLibrary.lastbuildstate  CasualLibrary.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ExternalTest/: CasualLibrary.cpp  ExternalTest.cpp  ExternalTest.vcxproj  ExternalTest.vcxproj.filters
InternalTest/: InternalTest.vcxproj  InternalTest.vcxproj.filters  dllmain.cpp
Release/: CasualLibrary.iobj  CasualLibrary.ipdb  CasualLibrary.vcxproj.FileListAbsolute.txt
Release/CasualLibrary.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CasualLibrary.lastbuildstate  CasualLibrary.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ZombieWar/: ZombieWar.cpp  ZombieWar.sln  ZombieWar.vcxproj  ZombieWar.vcxproj.filters
docs/html/: _helper_8h_source.html  _memory_8h_source.html  annotated.html  class_address-members.html  class_address.html  class_external_1_1_memory-members.html  class_external_1_1_memory.html  class_helper-members.html  class_helper.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  index.html  md__r_e_a_d_m_e.html  menudata.js  namespace_external.html  (+5 more)
include/: Address.h  Helper.h  Memory.h
src/: Helper.cpp  Memory.cpp
(+23 files in other folders)
